--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,83 +1,149 @@
 name: CI/CD Pipeline
 
 on:
-    push:
-        branches:
-            - main
-    pull_request:
-        branches:
-            - main
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-    test:
-        name: Test and Lint
-        runs-on: ubuntu-latest
+  test:
+    name: Test and Lint
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-            - name: Set up Python
-              uses: actions/setup-python@v5
-              with:
-                  python-version: "3.11"
-                  cache: "pip"
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          cache: "pip"
 
-            - name: Install dependencies
-              run: |
-                  cd inventory-service
-                  pip install --upgrade pip
-                  pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          cd inventory-service
+          pip install --upgrade pip
+          pip install -r requirements.txt
 
-            - name: Run tests with pytest
-              run: |
-                  cd inventory-service
-                  pytest tests/ -v --cov=app --cov-report=term-missing
+      - name: Run tests with pytest
+        run: |
+          cd inventory-service
+          pytest tests/ -v --cov=app --cov-report=term-missing
 
-            - name: Lint with ruff
-              run: |
-                  cd inventory-service
-                  ruff check app/ tests/ --output-format=github
+      - name: Lint with ruff
+        run: |
+          cd inventory-service
+          ruff check app/ tests/ --output-format=github
 
-    build-and-push:
-        name: Build and Push Docker Image
-        runs-on: ubuntu-latest
-        needs: test
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+  build-and-push:
+    name: Build and Push Docker Image
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-            - name: Log in to Docker Hub
-              uses: docker/login-action@v3
-              with:
-                  username: ${{ secrets.DOCKER_USERNAME }}
-                  password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-            - name: Extract metadata
-              id: meta
-              uses: docker/metadata-action@v5
-              with:
-                  images: ${{ secrets.DOCKER_USERNAME }}/inventory-service
-                  tags: |
-                      type=ref,event=branch
-                      type=sha,prefix={{branch}}-
-                      type=raw,value=latest,enable={{is_default_branch}}
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ secrets.DOCKER_USERNAME }}/inventory-service
+          tags: |
+            type=ref,event=branch
+            type=sha,prefix={{branch}}-
+            type=raw,value=latest,enable={{is_default_branch}}
 
-            - name: Build and push Docker image
-              uses: docker/build-push-action@v5
-              with:
-                  context: ./inventory-service
-                  file: ./inventory-service/Dockerfile
-                  push: true
-                  tags: ${{ steps.meta.outputs.tags }}
-                  labels: ${{ steps.meta.outputs.labels }}
-                  cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/inventory-service:buildcache
-                  cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/inventory-service:buildcache,mode=max
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./inventory-service
+          file: ./inventory-service/Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/inventory-service:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/inventory-service:buildcache,mode=max
 
-            - name: Image digest
-              run: echo ${{ steps.meta.outputs.digest }}
+      - name: Image digest
+        run: echo ${{ steps.meta.outputs.digest }}
+
+  deploy:
+    name: Deploy to DigitalOcean
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Deploy to DigitalOcean via SSH
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.DO_HOST }}
+          username: root
+          password: ${{ secrets.DO_PASSWORD }}
+          script: |
+            # Create network if it doesn't exist
+            docker network create inventory-network 2>/dev/null || true
+
+            # Pull the latest image
+            docker pull ${{ secrets.DOCKER_USERNAME }}/inventory-service:latest
+
+            # Stop and remove old containers
+            docker stop inventory-api 2>/dev/null || true
+            docker rm inventory-api 2>/dev/null || true
+
+            # Start MongoDB if not running
+            if [ ! "$(docker ps -q -f name=inventory-mongodb)" ]; then
+                docker run -d \
+                  --name inventory-mongodb \
+                  --network inventory-network \
+                  -p 27017:27017 \
+                  -v mongodb_data:/data/db \
+                  -e MONGO_INITDB_DATABASE=inventory_db \
+                  --restart unless-stopped \
+                  mongo:7.0
+                
+                # Wait for MongoDB to be ready
+                echo "Waiting for MongoDB to start..."
+                sleep 10
+            fi
+
+            # Run the new container
+            docker run -d \
+              --name inventory-api \
+              --network inventory-network \
+              -p 8001:8001 \
+              -e MONGODB_URI=mongodb://inventory-mongodb:27017 \
+              -e DATABASE_NAME=inventory_db \
+              -e PORT=8001 \
+              -e ENVIRONMENT=production \
+              --restart unless-stopped \
+              ${{ secrets.DOCKER_USERNAME }}/inventory-service:latest
+
+            # Clean up old images
+            docker image prune -af --filter "until=24h"
+
+            # Show status
+            echo "Deployment completed!"
+            docker ps --filter name=inventory
+
+            # Wait a bit and check health
+            sleep 5
+            curl -f http://localhost:8001/api/v1/health || echo "Warning: Health check failed"
