--- a/inventory-service/requirements.txt
+++ b/inventory-service/requirements.txt
@@ -12,6 +12,10 @@ pydantic==2.5.3
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
 
+# Observability
+prometheus-client==0.19.0
+python-json-logger==2.0.7
+
 # Testing
 pytest==7.4.4
 pytest-asyncio==0.23.3
