--- a/inventory-service/requirements.txt
+++ b/inventory-service/requirements.txt
@@ -16,6 +16,13 @@ python-dotenv==1.0.0
 prometheus-client==0.19.0
 python-json-logger==2.0.7
 
+# Distributed Tracing
+opentelemetry-api==1.21.0
+opentelemetry-sdk==1.21.0
+opentelemetry-instrumentation-fastapi==0.42b0
+opentelemetry-instrumentation-pymongo==0.42b0
+opentelemetry-exporter-jaeger==1.21.0
+
 # Testing
 pytest==7.4.4
 pytest-asyncio==0.23.3
